--- a/src/UI/sd-ui/src/components/common/ErrorPage.css
+++ b/src/UI/sd-ui/src/components/common/ErrorPage.css
@@ -1,15 +1,15 @@
-.app-error {
+.error-page{
   text-align: center;
   margin-top: 100px;
   font-family: "Arial", sans-serif;
 }
 
-.app-error h1 {
+.error-page h1 {
   font-size: 3rem;
   margin-bottom: 20px;
 }
 
-.app-error p {
+.error-page p {
   font-size: 1.2rem;
   color: #555;
 }
