--- a/src/UI/sd-ui/src/components/teams/TeamSchedule.css
+++ b/src/UI/sd-ui/src/components/teams/TeamSchedule.css
@@ -43,6 +43,12 @@
   font-weight: 600;
 }
 
+.team-schedule .result-tbd {
+  color: #9e9e9e;
+  font-weight: 500;
+  font-style: italic;
+}
+
 .team-link {
   color: var(--highlight-color, #ffc107);
   text-decoration: underline;
