--- a/src/UI/sd-ui/src/components/widgets/RankingsWidget.css
+++ b/src/UI/sd-ui/src/components/widgets/RankingsWidget.css
@@ -139,6 +139,31 @@
   text-overflow: ellipsis;
 }
 
+.rankings-table th:nth-child(2), .rankings-table td:nth-child(2) {
+  width: auto;
+  min-width: 120px;
+  max-width: 340px;
+  text-align: left;
+}
+
+.rankings-table th:nth-child(3), .rankings-table td:nth-child(3) {
+  width: 64px;
+  min-width: 48px;
+  max-width: 72px;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+}
+
+.rankings-table th:nth-child(4), .rankings-table td:nth-child(4) {
+  width: 64px;
+  min-width: 48px;
+  max-width: 72px;
+  text-align: center;
+  padding-left: 0;
+  padding-right: 0;
+}
+
 .rankings-table th:nth-child(5), .rankings-table td:nth-child(5) {
   width: 44px;
   min-width: 36px;
