--- a/src/UI/sd-ui/src/components/leagues/LeagueCreatePage.css
+++ b/src/UI/sd-ui/src/components/leagues/LeagueCreatePage.css
@@ -18,7 +18,7 @@ p {
 .card {
   background-color: #fff;
   border-radius: 12px;
-  padding: 2rem;
+  padding: 2rem !important;
   margin-bottom: 2rem;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
 }
